--- a/templates/home.html
+++ b/templates/home.html
@@ -92,19 +92,66 @@
                     / PROJECTS
                 </div>
                 <div class="project">
+                    <div class="project-title">BBC Introducing (Work)</div>
+                    <p>
+                        Worked on the BBC Introducing platform for 3 years. Was the technical lead on the project for 2 years.
+                    </p>
+                    <p>
+                        BBC Introducing is a music platform used by over 100,000 artists. Artists can upload their music
+                        to be processed and stored. This music can be accessed via an internal website which lets internal
+                        users browse the music, assign it to different channels, and log notes against them.
+                    </p>
+                    <p>
+                        Project consisted of multiple sites and a backend, and involved technologies such as <b class="tech">Scala</b>,
+                        <b class="tech">Typescript</b>, <b class="tech">React</b>, <b class="tech">MySQL</b>, <b class="tech">Elasticsearch</b>,
+                        <b class="tech">AWS</b>. 
+                    </p>
+                    <div class="project-links">
+                        <a href="/articles/music-platform">
+                            <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
+                            <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
+                        </a>
+                        <a href="https://www.bbc.co.uk/introducing">
+                            <img class="blue" src="{% static '/logos/link.svg' %}" width="25"></img>
+                            <img class="pink" src="{% static '/logos/link-pink.svg' %}" width="25"></img>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title"> Eletronic Lab Notebook (Work)</div>
+                    <p>
+                        Worked at IDBS on the Lab E-Workbook for 1 year. Helped to deliver a transition to a SaaS model, moving
+                        from a Java-based desktop application to a more modern web application.
+                    </p>
+                    <p>
+                        Primarily worked with <b class="tech">Java</b>, <b class="tech">Javascript</b>,
+                        <b class="tech">PolymerJS</b> and <b class="tech">Oracle</b>.
+                    </p>
+                    <div class="project-links">
+                        <a href="/articles/e-workbook">
+                            <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
+                            <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
+                        </a>
+                        <a href="https://www.idbs.com/products/e-workbook/">
+                            <img class="blue" src="{% static '/logos/link.svg' %}" width="25"></img>
+                            <img class="pink" src="{% static '/logos/link-pink.svg' %}" width="25"></img>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
                     <div class="project-title">Euphoria Draft</div>
                     <div class="project-image">
                         <img src="{% static '/images/players.png' %}"></img>
                     </div>
                     <p>
-                        Fantasy league drafter for League of Legends, using tournament match data
+                        Fantasy team drafter for League of Legends, using tournament match data
                         to calculate statistics for professional players and assign scores.
                     </p>
                     <p>
                         Developed with <b class="tech">Python</b> and <b class="tech">Django</b>
                     </p>
                     <div class="project-links">
-                        <a href="/projects/euphoria-draft">
+                        <a href="/articles/euphoria-draft">
                             <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
                             <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
                         </a>
@@ -118,48 +165,21 @@
                         </a>
                     </div>
                 </div>
-                <div class="project">
-                    <div class="project-title">Music Platform (Work)</div>
-                    <p>
-                        Music platform where artists can upload music. Music is processed and stored,
-                        and an internal website can be used to listen to the uploaded music and assign
-                        it to different channels, including audit trails for activity.
-                    </p>
-                    <p>
-                        Developed with <b class="tech">Scala</b>, <b class="tech">Tapir</b>, <b class="tech">http4s</b>,
-                        <b class="tech">Typescript</b>, <b class="tech">React</b>, <b class="tech">MySQL</b>, <b class="tech">Elasticsearch</b>,
-                        <b class="tech">AWS</b>, and more. 
-                    </p>
-                    <div class="project-links">
-                        <a href="/projects/music-platform">
-                            <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
-                            <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
-                        </a>
-                    </div>
-                </div>
                 <div class="project" >
-                    <div class="project-title">Planet Ray Tracer</div>
+                    <div class="project-title">Graphics Experiments</div>
                     
                     <div class="project-image">
                         <img src="{% static '/images/planet.png' %}"></img>
                     </div>
                     <p>
-                        Ray tracer written from scratch using WebGL, along with a terrain generation algorithm.
-                        Uses compute shaders for terrain generation and editing.
+                        A collection of different web toys I've written using a variety of tools.
+                        The picture is of an interactive planet generator and editor.
                     </p>
                     <p>
-                        Developed with <b class="tech">Javascript</b>, <b class="tech">GLSL</b> and <b class="tech">WebGL</b>.
+                        Developed with various tools including <b class="tech">Javascript</b>, <b class="tech">GLSL</b>, <b class="tech">WebGL</b> and <b class="tech">three.js</b>.
                     </p>
                     <div class="project-links">
-                        <a href="/projects/planet-ray-tracer">
-                            <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
-                            <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
-                        </a>
-                        <a href="https://github.com/billy-yoyo/Planet-Ray-Tracer">
-                            <img class="blue" src="{% static '/logos/github-blue.svg' %}" width="25"></img>
-                            <img class="pink" src="{% static '/logos/github-pink.svg' %}" width="25"></img>
-                        </a>
-                        <a href="https://billy-yoyo.github.io/Planet-Ray-Tracer/">
+                        <a class="desktop" href="/toys/ecs-gas/">
                             <img class="blue" src="{% static '/logos/link.svg' %}" width="25"></img>
                             <img class="pink" src="{% static '/logos/link-pink.svg' %}" width="25"></img>
                         </a>
@@ -179,7 +199,7 @@
                         and <b class="tech">Redis</b>.
                     </p>
                     <div class="project-links">
-                        <a href="/projects/camel-camel">
+                        <a href="/articles/camel-camel">
                             <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
                             <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
                         </a>
@@ -198,13 +218,13 @@
                     <p>
                         Reversed engineered Ubisoft's statistics API for the game Rainbox Six Siege. Turned it
                         into a reusable python library <b class="tech">r6sapi</b>, which ended up getting moderate
-                        interest and over 100 stars on GitHub. Also used this to power a Discord bot which served over 10k discord guilds.
+                        interest and over 100 stars on GitHub. Also used this to power a Discord bot which served over 30,000 discord guilds.
                     </p>
                     <p>
                         Developed with <b class="tech">Python</b>
                     </p>
                     <div class="project-links">
-                        <a href="/projects/rainbox-six-api">
+                        <a href="/articles/rainbox-six-api">
                             <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
                             <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
                         </a>
@@ -215,6 +235,28 @@
                         <a href="https://rainbowsixsiege-python-api.readthedocs.io/en/latest/">
                             <img class="blue" src="{% static '/logos/link.svg' %}" width="25"></img>
                             <img class="pink" src="{% static '/logos/link-pink.svg' %}" width="25"></img>
+                        </a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title">Discord Bot</div>
+                    <p>
+                        Used a combination of Web scraping + official steam APIs to create a Discord bot
+                        which could fetch information about Steam users, game prices, and notify users
+                        when certain games go on sale. Was in over 50,000 discord guilds, had over 100,000
+                        unique users and was translated into 11 languages.
+                    </p>
+                    <p>
+                        Developed with <b class="tech">Python</b> and <b class="tech">Redis</b>
+                    </p>
+                    <div class="project-links">
+                        <a href="/articles/steam-bot">
+                            <img class="pink" src="{% static '/logos/blog.svg' %}" width="25"></img>
+                            <img class="blue" src="{% static '/logos/blog-blue.svg' %}" width="25"></img>
+                        </a>
+                        <a href="https://github.com/billy-yoyo/SteamBot">
+                            <img class="blue" src="{% static '/logos/github-blue.svg' %}" width="25"></img>
+                            <img class="pink" src="{% static '/logos/github-pink.svg' %}" width="25"></img>
                         </a>
                     </div>
                 </div>
