--- a/personal_website/static/style.css
+++ b/personal_website/static/style.css
@@ -343,7 +343,10 @@ section .subtitle {
     box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 1);
     margin-bottom: 3rem;
     text-decoration: none;
-    text-align: justify;
+}
+
+.project:last-of-type {
+    margin-bottom: 0;
 }
 
 .project.selected {
