--- a/personal_website/static/style.css
+++ b/personal_website/static/style.css
@@ -72,6 +72,8 @@ article.blog {
     right: 0;
     bottom: 0;
     z-index: 11;
+    user-select: none;
+    pointer-events: none;
 }
 
 .subtitle {
