--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&family=Roboto:wght@400;700&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" type="image/svg" href="{% static 'favicon.svg' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}">
   <script src="{% static 'src/main.js' %}"></script>
   <title>{% block title %}Will Page{% endblock %}</title>
   <style>
