rename glsl files

--- a/templates/home.html
+++ b/templates/home.html
@@ -205,16 +205,12 @@
                             <img class="blue" src="{% static '/logos/github-blue.svg' %}" width="25"></img>
                             <img class="pink" src="{% static '/logos/github-pink.svg' %}" width="25"></img>
                         </a>
-                        <a href="/camel-game">
-                            <img class="blue" src="{% static '/logos/link.svg' %}" width="25"></img>
-                            <img class="pink" src="{% static '/logos/link-pink.svg' %}" width="25"></img>
-                        </a>
                     </div>
                 </div>
                 <div class="project">
                     <div class="project-title">Game API Library</div>
                     <p>
-                        Reversed engineered Ubisoft's statistics API for the game Rainbox Six Siege. Turned it
+                        Reversed engineered Ubisoft's statistics API for the game Rainbow Six Siege. Turned it
                         into a reusable python library <b class="tech">r6sapi</b>, which ended up getting moderate
                         interest and over 100 stars on GitHub. Also used this to power a Discord bot which served over 30,000 discord guilds.
                     </p>
