--- a/templates/toys/planet.html
+++ b/templates/toys/planet.html
@@ -3,11 +3,11 @@
 {% load static %}
 
 {% block toy %}
-  <script src="{% static 'src/planet/shaders/vertex.glsl' %}"></script>
-  <script src="{% static 'src/planet/shaders/intersection.glsl' %}"></script>
-  <script src="{% static 'src/planet/shaders/colour.glsl' %}"></script>
-  <script src="{% static 'src/planet/shaders/perlin.glsl' %}"></script>
-  <script src="{% static 'src/planet/shaders/heightmap.glsl' %}"></script>
+  <script src="{% static 'src/planet/shaders/vertex.glsl.js' %}"></script>
+  <script src="{% static 'src/planet/shaders/intersection.glsl.js' %}"></script>
+  <script src="{% static 'src/planet/shaders/colour.glsl.js' %}"></script>
+  <script src="{% static 'src/planet/shaders/perlin.glsl.js' %}"></script>
+  <script src="{% static 'src/planet/shaders/heightmap.glsl.js' %}"></script>
 
   <script src="{% static 'src/planet/js/matrix.js' %}"></script>
   <script src="{% static 'src/planet/js/program.js' %}"></script>
